# CYCoroutine

./: .gitignore  README.md  README_zh.md
Example/: CMakeLists.txt  main.cpp
Example/CYCorotineMacTest/CYCorotineMacTest.xcodeproj/: project.pbxproj
Example/CYCoroutineTest/: CYCoroutineTest.cpp  CYCoroutineTest.vcxproj  CYCoroutineTest.vcxproj.filters
Example/Mac/CYCorotineMacTest/CYCorotineMacTest/: main.cpp
Example/Mac/CYCorotineMacTest/CYCorotineMacTest.xcodeproj/project.xcworkspace/xcuserdata/shilianghao.xcuserdatad/: UserInterfaceState.xcuserstate
Example/Mac/CYCorotineMacTest/CYCorotineMacTest.xcodeproj/xcuserdata/shilianghao.xcuserdatad/xcschemes/: xcschememanagement.plist
Example/Windows/CYCoroutineTest/: CYCoroutineTest.vcxproj
Example/Windows/CYCoroutineTest/x64/Debug/CYCoroutineTest/: CYCoroutineTest.exe.recipe  vc143.idb
Example/Windows/CYCoroutineTest/x64/Debug/CYCoroutineTest/CYCoroutineTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CYCoroutineTest.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Inc/CYCoroutine/: CYCoroutine.hpp  CYCoroutineDefine.hpp  CYTypeDefine.hpp
Inc/CYCoroutine/Common/: CYBind.hpp  CYDebugString.hpp  CYList.hpp
Inc/CYCoroutine/Common/Exception/: CYBaseException.hpp  CYException.hpp
Inc/CYCoroutine/Common/Message/: CYBaseMessage.hpp
Inc/CYCoroutine/Common/Structure/: CYStringUtils.hpp
Inc/CYCoroutine/Common/Time/: CYTimeStamps.hpp
Inc/CYCoroutine/Engine/: CYCoroutineEngine.hpp  CYCoroutineEngineDefine.hpp
Inc/CYCoroutine/Executors/: CYDerivableExecutor.hpp  CYExecutor.hpp  CYInlineExecutor.hpp  CYManualExecutor.hpp  CYThreadExecutor.hpp  CYThreadPoolExecutor.hpp  CYWorkerThreadExecutor.hpp
Inc/CYCoroutine/Results/: CYGenerator.hpp  CYLazyResult.hpp  CYLazyResultAwaitable.hpp  CYMakeResult.hpp  CYPromises.hpp  CYResult.hpp  CYResultAwaitable.hpp  CYResumeOn.hpp  CYSharedResult.hpp  CYSharedResultAwaitable.hpp  CYWhenResult.hpp
Inc/CYCoroutine/Results/Impl/: CYAtomic.hpp  CYAtomicEx.hpp  CYBinarySemaphore.hpp  CYConsumerContext.hpp  CYCountingSemaphore.hpp  CYGeneratorState.hpp  CYLazyResultState.hpp  CYProducerContext.hpp  CYResultState.hpp  CYReturnValueStruct.hpp  CYSharedResultState.hpp
Inc/CYCoroutine/Task/: CYTask.hpp
Inc/CYCoroutine/Threads/: CYAsyncCondition.hpp  CYAsyncLock.hpp  CYCacheLine.hpp  CYThread.hpp
Inc/CYCoroutine/Timers/: CYTimer.hpp  CYTimerQueue.hpp
Src/: CYCoroutinePrivDefine.hpp
Src/Common/: CYDebugString.cpp
Src/Common/Exception/: CYBaseException.cpp
Src/Common/Message/: CYBaseMessage.cpp
Src/Common/Structure/: CYStringUtils.cpp
Src/Common/Time/: CYTimeStamps.cpp
Src/Engine/: CYCoroutineEngine.cpp  CYCoroutineEngineDefine.cpp  CYExecutorCollection.cpp  CYExecutorCollection.hpp
Src/Executors/: CYExecutor.cpp  CYExecutorDefine.hpp  CYInlineExecutor.cpp  CYManualExecutor.cpp  CYThreadExecutor.cpp  CYThreadPoolExecutor.cpp  CYWorkerThreadExecutor.cpp
Src/Results/Impl/: CYConsumerContext.cpp  CYResultState.cpp  CYSharedResultState.cpp
Src/Task/: CYTask.cpp
Src/Threads/: CYAsyncCondition.cpp  CYAsyncLock.cpp  CYThread.cpp
Src/Timers/: CYTimer.cpp  CYTimerQueue.cpp
